--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web development</title>
+    <link rel="icon" type="image/png" href="/src/img/html.png">
+
+    <!-- CSS -->
+
+    <link rel="stylesheet" href="./src/css/main.css">
+
 </head>
 <body>
-    
+    <h1>Web Development</h1>
 </body>
 </html>
