Structure (CSS, JS)
Me estoy muriendo

--- a/index.html
+++ b/index.html
@@ -9,9 +9,30 @@
     <!-- CSS -->
 
     <link rel="stylesheet" href="./src/css/main.css">
+    
+    <!-- JS -->
+    <script src="./src/js/main.js" defer></script>
+
+    <!--CSS #3-->
+    <style>
+        #myText {
+            color: aqua;
+        
+        }
+        .myClass {
+            color: blueviolet;
+        }
+
+        .myMood{
+            padding: 5%;
+        }
+    </style>
 
 </head>
 <body>
-    <h1>Web Development</h1>
+    <!-- CSS #2 -->
+    <h1 style="color: brown;">Web Development</h1>
+    <h3 id="myText">Local Storage vs Session storage</h3>
+    <h5 class="myClass myMood">Lil brah</h5>
 </body>
 </html>
