--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
     <h1 style="color: brown;">Web Development</h1>
     <h3 id="myText">Local Storage vs Session storage</h3>
     <h5 class="myClass myMood">Lil brah</h5>
+
+    <div id="result"></div>
 </body>
 </html>
