--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <span>Nombre(Local Storage):</span>
     <input type="text" name="nameLocal" id="nameLocal">
     <button onclick="saveToLocalStorage()"> Guardar </button><br><br>
-    <span>Nombre guardado es: XXX</span>
+    <span id="localSpan">Nombre guardado es: XXX</span>
     <hr>
     <h2>Session Storage</h2>
     <span>Nombre(Session Storage):</span>
     <input type="text" name="nameSession" id="nameSession">
     <button onclick="saveToSessionStorage()"> Guardar </button><br><br>
-    <span>Nombre guardado es: XXX</span>
+    <span id="sessionSpan">Nombre guardado es: XXX</span>
 
     <!-- JS -->
     <script src="./src/js/main.js"></script>
