Create library.js y puse a funcionar la funcion de procesar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <ul id="movieList"></ul>
 
     <script src="./src/js/main.js"></script>
+    <script src="./src/js/library.js"></script>
 
 </body>
 </html>
