--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
 
     <ul id="movieList"></ul>
 
+    <h2>Solicitud de Préstamo</h2>
+
+<input type="text" id="userName" placeholder="Nombre del usuario">
+<input type="text" id="book1" placeholder="Libro 1">
+<input type="text" id="book2" placeholder="Libro 2">
+
+<button onclick="procesar()">Procesar Solicitud</button>
+
+<p id="resultado"></p>
+
     <script src="./src/js/main.js"></script>
     <script src="./src/js/library.js"></script>
 
