--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
 
     <ul id="movieList"></ul>
 
-    <h2>Solicitud de Préstamo</h2>
+<h2>Solicitud de Préstamo</h2>
 
 <input type="text" id="userName" placeholder="Nombre del usuario">
-<input type="text" id="book1" placeholder="Libro 1">
-<input type="text" id="book2" placeholder="Libro 2">
+<input type="text" id="book" placeholder="Libro">
 
 <button onclick="procesar()">Procesar Solicitud</button>
 
